# ThalliumGameEngine

./: Cargo.toml  LICENCE  README.md
src/: lib.rs  math.rs  opengl_renderer.rs  opengl_shader.rs  opengl_vertex_buffer.rs  renderer.rs  vector2.rs  vector3.rs  vertex_buffer.rs  window.rs
src/math/: matrix.rs  mod.rs  vector2.rs  vector3.rs  vector4.rs
src/platform/: mod.rs  surface.rs
src/platform/windows/: mod.rs  surface.rs
src/renderer/: index_buffer.rs  mod.rs  renderer.rs  shader.rs  texture.rs
src/renderer/opengl/: mod.rs  opengl_index_buffer.rs  opengl_renderer.rs  opengl_shader.rs  opengl_texture.rs  opengl_vertex_buffer.rs
src/scene/: camera.rs  mod.rs  transform.rs
