[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
widestring = "1.0.2"
lazy_static = "1.4.0"
gl = "0.14.0"
enum-map = "2.4.1"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_OpenGL",
]
