[package]
name = "thallium"
version = "0.1.7"
edition = "2021"
description = "A 2d and 3d game engine"
license-file = "LICENCE"

[dependencies]
lazy_static = "1.4.0"
gl = "0.14.0"
enum-map = "2.4.1"
stb_image = "0.2.4"

[target.'cfg(windows)'.dependencies]
widestring = "1.0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_OpenGL",
]
